--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -1,5 +1,11 @@
 <h1>New Answer</h1>
 
-<%= render 'form', answer: @answer %>
+<% if @task.technical? %>
+  <%= render 'technical_answer_form', answer: @answer %>
+<% end %>
 
-<%= link_to 'Back', answers_path %>
+<% if @task.english? %>
+  <%= render 'english_answer_form', answer: @answer %>
+<% end %>
+
+<%= link_to 'Back', root_path %>
