--- a/app/views/admin/tasks/_show.html.erb
+++ b/app/views/admin/tasks/_show.html.erb
@@ -15,6 +15,5 @@
 
 <p>
   <strong>Attachment:</strong>
-  <%#= link_to 'File', @task.attachment %>
-  <%= @task.attachment  %>
+  <%= url_for @task.attachment  %>
 </p>
