--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,14 +6,14 @@
 
   <h3><%= !technical_task_is_assigned ? 'Technical task' : 'Answer for technical task' %></h3>
   <% if technical_task_is_assigned %>
-    <% if current_user.technical_task.answer.present? %>
-      <% unless current_user.technical_task.answer.link.to_s.strip.empty? %>
-          <%= link_to 'Link to repository', current_user.technical_task.answer.link, target: '_blank' %> <br>
+    <% if @technical_task_answer.present? %>
+      <% unless @technical_task_answer.link.to_s.strip.empty? %>
+          <%= link_to 'Link to repository', @technical_task_answer.link, target: '_blank' %> <br>
       <% end %>
-      <% if current_user.technical_task.answer.attachment.attached? %>
+      <% if @technical_task_answer.attachment.attached? %>
         <%= link_to(
-              "Завантажений файл: #{ current_user.technical_task.answer.attachment.filename.to_s }",
-              rails_blob_path(current_user.english_task.answer.attachment, disposition: 'attachment'),
+              "Завантажений файл: #{ @technical_task_answer.attachment.filename.to_s }",
+              rails_blob_path(@technical_task_answer.attachment, disposition: 'attachment'),
             ) %>
       <% end %>
     <% else %>
@@ -35,21 +35,23 @@
 </div>
 
 <!-- English -->
-  <div class="col border p-3 ">
+  <div class="col border p-3">
     <% english_task_is_assigned = current_user.english_task.present? %>
     <h3><%= !english_task_is_assigned ? 'English task' : 'Answer for English task' %></h3>
     <% if english_task_is_assigned %>
-      <% if current_user.english_task.answer.present? && current_user.english_task.answer.attachment.attached? %>
+      <%# if @english_task_answer.present? && @english_task_answer.attachment.attached? %>
+      <% if @eta_attachment.present? && @eta_attachment.attached? %>
         Завантажений файл:
         <%= link_to(
-              current_user.english_task.answer.attachment.filename,
-              rails_blob_path(current_user.english_task.answer.attachment, disposition: 'attachment')
+              @eta_attachment.filename,
+              # rails_blob_path(@english_task_answer.attachment, disposition: 'attachment')
+              rails_blob_path(@eta_attachment, disposition: 'attachment')
         ) %>
       <% else %>
         <div class="card" style="width: 100%;">
           <div class="card-body">
             <p class="card-text">
-              <%= current_user.technical_task.body %>
+              <%= current_user.english_task.body %>
             </p>
             <%= link_to 'Завантажити тест англійської', "answers/new/#{ current_user.english_task.id }", class: 'card-link'%>
           </div>
