implemented Answers screen for amdin section

--- a/app/views/answers/_english_answer_form.html.erb
+++ b/app/views/answers/_english_answer_form.html.erb
@@ -11,8 +11,8 @@
   <% end %>
   <%= form.hidden_field :task_id, value: @task.id %>
   <div class="field">
-    <%= form.label :attachment, 'File' %>
-    <%= form.file_field :attachment %>
+    <%= form.label :attached_file, 'File' %>
+    <%= form.file_field :attached_file %>
   </div>
 
   <div class="actions">
