--- a/app/views/answers/_technical_answer_form.html.erb
+++ b/app/views/answers/_technical_answer_form.html.erb
@@ -15,8 +15,8 @@
     <%= form.text_field :link %>
   </div>
   <div class="field">
-    <%= form.label :attachment, 'File' %>
-    <%= form.file_field :attachment %>
+    <%= form.label :attached_file, 'File' %>
+    <%= form.file_field :attached_file %>
   </div>
 
   <div class="actions">
