--- a/app/views/answers/index.html.erb
+++ b/app/views/answers/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= answer.user_id %></td>
         <td><%= answer.task_id %></td>
         <td><%= answer.link %></td>
-        <td><%= answer.attachment %></td>
+        <td><%= answer.attached_file %></td>
         <td><%= link_to 'Show', answer %></td>
         <td><%= link_to 'Edit', edit_answer_path(answer) %></td>
         <td><%= link_to 'Destroy', answer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
