--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
   <strong>Attachment:</strong>
-  <%= @answer.attachment %>
+  <%= @answer.attached_file %>
 </p>
 
 <%= link_to 'Edit', edit_answer_path(@answer) %> |
