--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :attachment %>
-    <%= form.text_field :attachment %>
+    <%= form.label :attached_file %>
+    <%= form.text_field :attached_file %>
   </div>
 
   <div class="actions">
