--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -27,8 +27,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :attachment %>
-    <%= form.text_field :attachment %>
+    <%= form.label :attached_file %>
+    <%= form.text_field :attached_file %>
   </div>
 
   <div class="actions">
