--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Attachment:</strong>
-  <%= @task.attachment %>
+  <%= @task.attached_file %>
 </p>
 
 <%= link_to 'Edit', edit_task_path(@task) %> |
